# CUDA-rho-pollard

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py  profile_rho_pollard_kernel.py
final_raport/: .gitignore
final_raport/tex/: cuda.tex  math_theory.tex  state-of-art.tex
mid_raport/dyplom/: bibliografia.bib  main.tex
mid_raport/dyplom/eiti/: eiti-thesis.cls
mid_raport/dyplom/tex/: 0-plans.tex  3-code-listings.tex
project/cuda_examples/: Makefile
project/cuda_rho_pollard/: .gitignore  CMakeLists.txt
project/cuda_rho_pollard/src/: ecc.cu  main.cu  main.cuh
project/cuda_rho_pollard/tests/: test.cu  test_ECCp-20.cu  test_add_points_ECC79p.cu  test_cgbn.cu  test_perf_ECCp-20.cu
raport/: bib-mendeley.bib  bib-mendeley.bib.ba  bib-other.bib  bibliografia.bib  export.bib  main.tex  notatki.md
raport/eiti/: eiti-thesis.cls
raport/img/: Schemat architektury (1).excalidraw  Schemat architektury.excalidraw
raport/tex/: 0-plans.tex  1-intro.tex  1-theory.tex  2-math-theory.tex  2-teoria.tex  3-koncepcja.tex  4-implementacja.tex  5-wyniki.tex  6-podsumowanie.tex  6-porownanie.tex  implementation.tex  intro.tex  koncepcja.tex  math_theory.tex
raport/utils/: plot_ec_add.py  plot_ec_finte_field.py
sage/: ecc_79p.ipynb  el-gamal-elliptic.ipynb  el-gamal-multiplicative.ipynb  elliptic-addition.ipynb  miscellaneous_curves_and_GF_addition.ipynb  rho-pollard-elliptic.ipynb  rho-pollard.ipynb
sage/mp_tests/: add_int79.ipynb
sage/raport_math/: elliptic-addition.ipynb  elliptic-curves.ipynb  miscellaneous_curves_and_GF_addition.ipynb
sage/rhop_simulation/: ECCp-20.ipynb  ECCp-79  ECCp-79.ipynb  Untitled.ipynb  rho-pollard-elliptic.ipynb
sage/rhop_simulation/.ipynb_checkpoints/: ECCp-20-checkpoint.ipynb
src/: bignum.cu  bignum.cuh  bn_ec_point_ops.cu  bn_ec_point_ops.cuh  ec_points_ops.cu  ec_points_ops.cuh  ecc32.cu  ecc32.cuh  main.cu  main.cuh  rho_pollard_kernel.cu  test_kernel.cu  test_kernels.cu  utils.cuh
src/python/: c_api.py  elliptic_curve.py  gpu_worker.py  main.py  settings.py  utils.py
tests/: conftest.py  profile_rho_pollard_kernel.py  run_tests.sh  settings.py  test_add_points.py  test_add_points_ECC79p.cu  test_add_points_batch.py  test_adding_points_ECC79p.cu  test_double_point.py  test_rho_pollard_kernel.py  tests_expected_values.ipynb
